--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Gian Solo
 email: ftlguitars@gmail.com
-description: The Jekyll version of the Spectral theme by HTML5 UP.
+description: Handcrafted development through music information, unique arts and lifestyle curation.
 baseurl: "/spectral-jekyll-theme" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 
@@ -14,15 +14,15 @@ featured-image-source:
 
 # Social settings
 500px_url:
-facebook_url:
+facebook_url: https://www.facebook.com/gianaudio
 github_url:
-gitlab_url: https://gitlab.com/u/andrewbanchich
-googleplus_url: https://plus.google.com/u/0/+AndrewBanchich
+gitlab_url: 
+googleplus_url: 
 instagram_url: https://www.instagram.com/gian_solo/
-linkedin_url: https://www.linkedin.com/in/andrew-banchich-a4ba1195
+linkedin_url: 
 pinterest_url:
 slack_url:
-twitter_url: https://twitter.com/andrewbanchich
+twitter_url: https://twitter.com/gian_solo
 
 # Build settings
 markdown: kramdown
