--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Gian Solo
-email: ftlguitars@gmail.com
+email: gtrsage@gmail.com
 description: Handcrafted development through music information, unique arts and lifestyle curation.
 baseurl: "/giansolo" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
