--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ email: gtrsage@gmail.com
 description: Handcrafted development through music information, unique arts and lifestyle curation.
 baseurl: "/giansolo" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
+permalink: /:categories/:title/
 
 # Homepage tiles
 tiles-source: posts # accepts "posts" or "pages"
