--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Gian Solo
 email: gtrsage@gmail.com
-description: Handcrafted development through music information, unique arts and lifestyle curation.
+description: Handcrafted guitar development through information, technique and style.
 baseurl: "/giansolo" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 permalink: /:categories/:title/
