--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Gian Solo
+title: Gian Guitar
 email: gtrsage@gmail.com
 description: Handcrafted guitar development through lessons, instructions, sessions & consultations.
 baseurl: "/giansolo" # the subpath of your site, e.g. /blog
