--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Gian Guitar
+title: Gian Guitar - Guitar Lessons in San Fernando Valley/LA I Professional Guitar Development Through Expert Instruction  
 email: gtrsage@gmail.com
 description: Handcrafted guitar development through lessons, instructions, sessions & consultations.
 baseurl: "/" # the subpath of your site, e.g. /blog
