--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,11 @@ permalink: /:categories/:title/
 tiles-source: posts # accepts "posts" or "pages"
 tiles-count: 3
 
+# Comments
+disqus_shortname: iamgian-2
+url:              https://gianguitar.com
+
+
 # Misc settings
 featured-image-source:
 
